# Forecast-Green-Energy

./: .gitignore  Notebook.ipynb  README.md  answer.py  pyproject.toml
data/: submission.csv
