[tool.poetry]
name = "forecast-green-energy"
version = "0.1.0"
description = ""
authors = ["cse-vaibhav <jainvaibhav671@gmail.com>"]
readme = "README.md"
packages = [{include = "forecast_green_energy"}]

[tool.poetry.dependencies]
python = "^3.11"
jupyter = "^1.0.0"
sklearn = "^0.0.post1"
numpy = "^1.23.4"
pandas = "^1.5.1"
seaborn = "^0.12.1"
scikit-learn = "^1.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
